<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".fragments.SettingsFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="72dp"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="15dp"
            android:text="@string/txt_general"
            android:textColor="@color/colorSecondaryDark" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:layout_marginBottom="15dp"
            android:background="@drawable/bg_click_ripple"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:layout_margin="8dp"
                android:padding="10dp"
                android:src="@drawable/ic_folder"
                app:tint="@color/colorSecondaryDark"
                android:contentDescription="@string/content_folder" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="8dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/txt_downloads"
                    android:textColor="@color/colorSecondaryDark" />

                <TextView
                    android:id="@+id/txtDownloads"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/darker_gray"
                    android:layout_marginTop="5dp"
                    android:text="@string/todo"
                    android:textSize="13sp" />

            </LinearLayout>


        </LinearLayout>

        <!--Separator-->
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorSecondaryLight"
            android:visibility="visible" />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="72dp"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="15dp"
            android:text="@string/txt_author"
            android:textColor="@color/colorSecondaryDark" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:layout_marginBottom="5dp"
            android:background="@drawable/bg_click_ripple"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:layout_margin="8dp"
                android:padding="10dp"
                android:src="@drawable/ic_administrator_male"
                app:tint="@color/colorSecondaryDark"
                android:contentDescription="@string/content_author" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="8dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/txt_author"
                    android:textColor="@color/colorSecondaryDark" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/darker_gray"
                    android:layout_marginTop="5dp"
                    android:text="@string/mrkaz" />

            </LinearLayout>


        </LinearLayout>

        <LinearLayout
            android:id="@+id/layoutAuthorGithub"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:background="@drawable/bg_click_ripple"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:layout_margin="8dp"
                android:padding="8dp"
                android:src="@drawable/ic_github"
                app:tint="@color/colorSecondaryDark"
                android:contentDescription="@string/content_github" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="8dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/txt_github"
                    android:textColor="@color/colorSecondaryDark" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:textColor="@android:color/darker_gray"
                    android:text="@string/txt_github_profile" />

            </LinearLayout>


        </LinearLayout>

        <LinearLayout
            android:id="@+id/layoutSourceGithub"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="5dp"
            android:layout_marginBottom="15dp"
            android:background="@drawable/bg_click_ripple"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:layout_margin="8dp"
                android:padding="10dp"
                android:src="@drawable/ic_source_code"
                app:tint="@color/colorSecondaryDark"
                android:contentDescription="@string/content_src" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="8dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/txt_source"
                    android:textColor="@color/colorSecondaryDark" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:textColor="@android:color/darker_gray"
                    android:text="@string/txt_download_src" />

            </LinearLayout>


        </LinearLayout>

        <!--Separator-->
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorSecondaryLight"
            android:visibility="visible" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="72dp"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="5dp"
            android:text="@string/txt_app"
            android:textColor="@color/colorSecondaryDark" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="@drawable/bg_click_ripple"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:layout_margin="8dp"
                android:padding="10dp"
                android:src="@drawable/ic_versions"
                app:tint="@color/colorSecondaryDark"
                android:contentDescription="@string/content_version" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="8dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="@string/txt_version"
                    android:textColor="@color/colorSecondaryDark" />

                <TextView
                    android:id="@+id/txtAppVersion"
                    android:layout_width="match_parent"
                    android:textColor="@android:color/darker_gray"
                    android:layout_height="wrap_content"
                    android:text="@string/txt_version_placeholder" />

            </LinearLayout>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:layout_marginBottom="15dp"
            android:background="@drawable/bg_click_ripple"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:layout_margin="8dp"
                android:padding="10dp"
                android:src="@drawable/ic_android"
                app:tint="@color/colorSecondaryDark"
                android:contentDescription="@string/content_package" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="8dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorSecondaryDark"
                    android:text="@string/txt_package" />

                <TextView
                    android:id="@+id/txtAppPackage"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:textColor="@android:color/darker_gray"
                    android:text="@string/txt_package_placeholder" />

            </LinearLayout>


        </LinearLayout>

        <!--Separator-->
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorSecondaryLight"
            android:visibility="visible" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="72dp"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="5dp"
            android:text="@string/txt_built_with"
            android:textColor="@color/colorSecondaryDark" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="@drawable/bg_click_ripple"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:layout_margin="8dp"
                android:padding="10dp"
                android:src="@drawable/ic_kotlin"
                app:tint="@color/colorSecondaryDark"
                android:contentDescription="@string/content_built_with" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="8dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/darker_gray"
                    android:text="@string/built_with"
                    android:textSize="13sp" />

            </LinearLayout>


        </LinearLayout>

    </LinearLayout>

</ScrollView>