<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".activities.MainActivity">

    <ImageView
        android:id="@+id/imgLogo"
        android:layout_width="75dp"
        android:padding="5dp"
        android:layout_height="75dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="25dp"
        android:contentDescription="@string/content_logo"
        android:src="@drawable/ic_logo_mdisk_transparent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="@color/colorSecondaryDark" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="20dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgLogo">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical"
            tools:ignore="UselessParent">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/txt_title"
                android:textColor="@color/colorSecondaryDark"
                android:textSize="23sp"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/google_sans_thin"
                android:text="@string/txt_description"
                android:textColor="@color/colorSecondaryLight"
                android:textSize="14sp" />

        </LinearLayout>

    </LinearLayout>

    <ImageView
        android:id="@+id/imgRocket"
        android:layout_width="0dp"
        app:layout_constraintBottom_toTopOf="@id/linearLayout2"
        android:layout_height="170dp"
        android:layout_marginStart="95dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="95dp"
        android:contentDescription="@string/content_rocket"
        android:scaleType="fitXY"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="16dp"
        android:orientation="horizontal"
        android:weightSum="2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgRocket">

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/card_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="2"
            android:visibility="visible"
            app:cardBackgroundColor="@color/grayDark"
            app:cardCornerRadius="12.0dip"
            app:cardElevation="0dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="52dp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imagePaste"
                    android:layout_width="55dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:background="@drawable/bg_insert_link"
                    android:clickable="true"
                    android:contentDescription="@string/content_paste_url"
                    android:focusable="true"
                    android:padding="13dp"
                    android:src="@drawable/ic_insert_link"
                    app:tint="@color/colorSecondaryDark" />

                <EditText
                    android:id="@+id/etUrl"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:layout_gravity="center"
                    android:layout_margin="10dp"
                    android:autofillHints="Paste url here.."
                    android:background="@android:color/transparent"
                    android:gravity="center"
                    android:hint="@string/et_url_hint"
                    android:inputType="textUri"
                    android:singleLine="true"
                    android:textColor="@color/colorSecondaryDark"
                    android:textColorHint="@color/colorSecondaryDark"
                    android:textSize="13sp" />

            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>

        <ImageView
            android:id="@+id/btnDownload"
            android:layout_width="55dp"
            android:layout_height="55dp"
            android:layout_marginStart="8dp"
            android:layout_weight="1.7"
            android:background="@drawable/bg_insert_link"
            android:contentDescription="@string/content_download"
            android:padding="12dp"
            android:src="@drawable/ic_downloads_folder"
            app:tint="@color/colorSecondaryDark" />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>