<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".fragments.DownloadsFragment">

    <androidx.cardview.widget.CardView
        android:id="@+id/cvNote"
        android:layout_width="match_parent"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        app:cardCornerRadius="6dp"
        app:cardBackgroundColor="@color/white"
        app:cardElevation="0dp"
        android:layout_marginEnd="10dp"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:text="@string/txt_note"
                android:textColor="@color/colorSecondary"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginTop="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <TextView
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@android:color/darker_gray"
                android:text="@string/player_note"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnHideNote"
                android:text="@string/txt_ok"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:textColor="@color/colorSecondary"
                android:layout_gravity="end"
                app:rippleColor="@color/white"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:id="@+id/layoutEmpty"
        android:visibility="gone"
        android:gravity="center"
        android:layout_margin="5dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:textColor="@android:color/darker_gray"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_empty_downloads"/>

    </LinearLayout>

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:visibility="visible"
        android:id="@+id/swipeRefreshLayout"
        android:layout_width="match_parent"
        android:layout_margin="5dp"
        android:layout_height="wrap_content">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvDownloadList"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            tools:listitem="@layout/download_list_item_row" />

    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

</LinearLayout>